crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_impl_indent_method.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected a method definition.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write the method name and arguments, followed by `=` and its body.
