crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_impl_method_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "impl Eq int where\n    1 = 1"
---
nash::syntax

  × Expected a method definition.
   ╭─[src/Main.nash:2:5]
 1 │ impl Eq int where
 2 │     1 = 1
   ·     ─
   ╰────
  help: Write the method name and arguments, followed by `=` and its body.
