crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_impl_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "impl\tEq int where"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:5]
 1 │ impl    Eq int where
   ·     ────
   ╰────
  help: Replace the tab with spaces.
