crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_impl_where.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected `where` after the impl head.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add `where`, then indent the method definitions.
