crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_bad_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Unexpected operator `(=)`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Put the operator in an expression, or indent this line to continue the preceding
        expression.
