crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_declarations.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a declaration.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Start a named definition here, or indent this line to continue the preceding
        definition.
