crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_exposing.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: module Main exposing ..
---
nash::syntax

  × Expected `(` after `exposing`.
   ╭─[src/Main.nash:1:22]
 1 │ module Main exposing ..
   ·                      ─
   ╰────
  help: Enclose the exposed names in parentheses.
