crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_fresh_line.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Top-level declarations must start on separate lines.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Start the declaration in column 1 on a new line.
