crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_alias.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
EXPECTING IMPORT ALIAS

  × I was parsing an `import` until I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see an alias next, like in these examples:

            import Cardano.Tx as Tx
            import Data.Decoder as D

        Notice that the alias always starts with a capital letter. That is required!
