crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_as.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: import Main alias
---
nash::syntax

  × Invalid import declaration.
   ╭─[src/Main.nash:1:13]
 1 │ import Main alias
   ·             ─
   ╰────
  help: Write `import Module`, optionally followed by `as Alias` and `exposing (names)`.
